# viking-log-keeper

./: .LICENSE  .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  flet.config  main.py  packages.txt  pyproject.toml  requirements.txt  setup.py
.github/: copilot-instructions.md
.github/workflows/: python-package.yml  python-publish.yml
.streamlit/: config.toml
docs/: 2965D_YYMMDD_ZEXXX.xltx
log_keeper/: log_keeper.py  main.py
scripts/: run_log_keeper.bat  year_end.ipynb
src/: attendance.py
src/dashboard/: __init__.py  attendance.py  attendance_output.py  attendance_plots.py  auth.py  dashboard.py  main.py  plots.py  requirements.txt  session.py  streamlit_app.py  utils.py  weather.py  weather_plots.py  weather_utils.py
src/dashboard/pages/: gif_tracker.py
src/log_gui/: main.py
src/log_keeper/: __init__.py  get_config.py  gui.py  ingest.py  main.py  output.py  utils.py  weather.py
src/log_keeper/scripts/: run_log_keeper.bat
test/: test_dashboard.py
tests/: conftest.py  test_attendance.py  test_attendance_output.py  test_auth.py  test_dashboard.py  test_dashboard_utils.py  test_ingest.py  test_logout.py  test_output.py  test_session.py  test_weather.py
tests/fixtures/: 2965D_260214_ZE633.xlsx  invalid.xlsx
