[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "viking-log-keeper"
version = "0.5.0"
authors = [
  { name="Michael Jennings", email="mjennings061@gmail.com" },
]
description = "661 VGS - Function to collate 2965D log sheets into a master log and database."
readme = "README.md"
requires-python = ">3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "pandas==2.0.2",
    "pymongo[srv]==4.4.1",
    "xlsxwriter==3.1.2",
    "openpyxl==3.1.2",
    "cryptography==41.0.3",
    "inquirer==3.1.3",
    "python-dotenv==1.0.0"
]

[project.urls]
"Homepage" = "https://github.com/mjennings061/viking-log-keeper"
"Repository" = "https://github.com/mjennings061/viking-log-keeper.git"

[project.optional-dependencies]
dev = ["build", "wheel"]

[project.scripts]
update-logs = "log_keeper.main:main"