[tool.poetry]
name = "viking-log-keeper"
version = "1.1.0"
description = "661 VGS - Function to collate 2965D log sheets into a master log, database, and dashboard."
authors = ["Michael Jennings <mjennings061@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
packages = [
    { include = "log_keeper", from = "src" },
    { include = "dashboard", from = "src" }
]

[tool.poetry.dependencies]
extra-streamlit-components = "^0.1.70"
inquirer = "^3.2.0"
keyring = "^24.3.0"
logging = "^0.4.9.6"
matplotlib = "^3.8.0"
openpyxl = "^3.1.2"
python = ">=3.10,<4.0"
pandas = "^2.2.0"
pymongo = {extras = ["srv"], version = "^4.6.1"}
streamlit = "^1.32.0"
xlsxwriter = "^3.2.0"

[tool.poetry.urls]
homepage = "https://github.com/mjennings061/viking-log-keeper"
repository = "https://github.com/mjennings061/viking-log-keeper.git"

[tool.poetry.scripts]
update-logs = "log_keeper.main:main"
update-config = "dashboard.auth:update_credentials_wrapper"
update-log-sheet-location = "log_keeper.get_config:update_log_sheets_dir_wrapper"
viking-dashboard = "dashboard.main:display_dashboard"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
